Fix margin right on overflow-x

--- a/src/styles/home/_Scroll.scss
+++ b/src/styles/home/_Scroll.scss
@@ -25,22 +25,26 @@ $white: white;
   overflow-x: auto;
 }
 
-.scroll_card:first-child {
-  margin-left: 20px;
-}
-
 .scroll_card {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  margin: 0px 20px 40px 0px;
-  width: 60%;
-  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  background-color: $white;
+  margin-left: 20px;
   border-radius: 10px;
-  padding: 10px 0px 10px 0px;
+  max-width: 300px;
+  width: 60%;
+  padding: 10px 10px 10px 10px;
+}
+
+.scroll_card:last-child {
+  margin-right: 20px;
+}
+
+.scroll_cards_container::after {
+  content: '';
+  padding-right: 0.02px;
 }
 
 .scroll_cards_container::-webkit-scrollbar {
